Creation Home page depuis template SemanticUI

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -15,3 +15,10 @@ framework:
     #fragments: true
     php_errors:
         log: true
+
+    assets:
+        packages:
+            cst_css:
+                base_path: 'assets/css/'
+            home_img:
+                base_path: 'assets/img/home/'
