--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -26,3 +26,5 @@ framework:
                 base_path: 'assets/parent-dashboard'
             ra:
                 base_path: 'assets/ra'
+            quest-book:
+                base_path: 'assets/quest-book'
