--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -20,6 +20,8 @@ framework:
         packages:
             cst_css:
                 base_path: 'assets/css/'
+            custom_fonts:
+                base_path: 'assets/fonts'
             home_img:
                 base_path: 'assets/img/home/'
             parent_dashboard:
