--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=f9d0ed892e495f17a5a47fccc684af2e
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-#DATABASE_URL=mysql://root:@127.0.0.1:3306/pfe
-DATABASE_URL=mysql://newuser:@127.0.0.1:3306/pfe
+DATABASE_URL=mysql://root:@127.0.0.1:3306/pfe
+#DATABASE_URL=mysql://newuser:@127.0.0.1:3306/pfe
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
