--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,29 +25,31 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        journal:
+            anonymous: true
+            access_denied_url: /accessdenied
+            pattern: ^/journal
+            logout_on_user_change: true
+            provider: child_user_provider
+            form_login:
+                check_path: ouvrir-journal
+                login_path: ouvrir-journal
+                default_target_path: quest-book
+            logout:
+                path: /logout
+                target: /
+
+
         parent_dashboard:
             anonymous: true
             access_denied_url: /accessdenied
-            pattern:   ^/
+            #            pattern:   ^/login
             logout_on_user_change: true
             provider:  parent_user_provider
             form_login:
                 check_path: login
                 login_path: login
                 default_target_path: dashboard
-            logout:
-                path: /logout
-                target: /
-
-        journal:
-            pattern: ^/journal
-            anonymous: false
-            provider: child_user_provider
-            logout_on_user_change: true
-            access_denied_url: /accessdenied
-            form_login:
-                check_path: ouvrir-journal
-                login_path: ouvrir-journal
             logout:
                 path: /logout
                 target: /
