TropyService OK, several new Trophies OK

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,3 +5,4 @@ twig:
     globals:
         lv: '@App\Service\LevelService'
         qs: '@App\Service\QuestStatusService'
+        ts: '@App\Service\TrophyService'
